It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Tue, May 19, 2009
---------------------------------------------------------------------
- Added missing and protected object handling for #convert, #promote, #reject (Leads).
- Added new [tracked_by] named scope for Tasks.
- Added missing and protected object handling for Tasks.
- Refactored rescue clause to use respond_to_not_found().

Mon, May 18, 2009
---------------------------------------------------------------------
- Added missing and protected object handling for #update and #delete (all except Tasks).

Sun, May 17, 2009
---------------------------------------------------------------------
- Added missing object handling for #edit action (all core objects except Tasks).
- If object permissions prevent access, treat the object as missing.
- Refacoring: use more idiomatic Rails named scope (User#except).

Sat, May 16, 2009
---------------------------------------------------------------------
- Added missing object handling for #show action (all core objects except Tasks).
- Added controller routing specs for new routes.

Fri, May 15, 2009
---------------------------------------------------------------------
- Replaced explicit MySQL trigger creation with [add_uuid_trigger].

Thu, May 14, 2009
---------------------------------------------------------------------
- Started with LH #34 (Gracefully handle missing objects).
- Replaced regular flash messages with non-sticky ones.
- Make sure search box gets shown after creating, updating, or deleting an account.

Wed, May 13, 2009
---------------------------------------------------------------------
- Implemented search for campaigns, opportunities, accounts, and contacts.
- Made it easier to reject leads (LH #35).
- Added sidebar summary for accounts.
- Added web presence links for leads and contacts.

Tue, May 12, 2009