@@ -42,13 +42,16 @@ class LeadsController < ApplicationController
     @campaigns = Campaign.my(@current_user).all(:order => "name")
     if params[:related]
       model, id = params[:related].split("_")
-      instance_variable_set("@#{model}", model.classify.constantize.find(id))
+      instance_variable_set("@#{model}", model.classify.constantize.my(@current_user).find(id))
     end
 
     respond_to do |format|
       format.js   # new.js.rjs
       format.xml  { render :xml => @lead }
     end
+
+  rescue ActiveRecord::RecordNotFound # Kicks in if related asset was not found.
+    respond_to_related_not_found(model, :js) if model
   end
 
   # GET /leads/1/edit                                                      AJAX
